# different

./: Cargo.toml  README.md  TODO.md  flake-ci.toml
.github/: settings.yml
.github/workflows/: ci.yaml
checklists/: rust.toml
checklists/templates/: rust-README.md.j2
nix/: devshell.nix
nix/checks/: cargo-diet.nix
nix/devshells/: default.nix
src/: lib.rs  main.rs  runner.rs
tests/cmd/: simple.stdout  simple.toml
tests/cmd/simple.in/: right
