[package]
name = "differ"
description = "Pretty line-based diff printouts (bin and library)"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/differ"
repository = "https://github.com/adam-gaia/differ"

[[bin]]
name = "diff"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"]}
colored = "3.0.0"
diff = "0.1.13"

[dev-dependencies]
trycmd = "0.15.9"

